# toronto-shelter-optimization-framework

./: .gitignore  EDA.ipynb  README.md  pyproject.toml
data/processed/: ByProgramNameCapacities.csv  capacities_per_shelter.csv  demand_per_hotspot.csv  demand_per_month_by_gender.csv  distance_amtrix.csv  eligibility_df.csv  eligibility_matrix_men_initial.csv  eligibility_matrix_women_initial.csv  hotspot_ratio_demand.csv  neighbourhood_census_2016_2021.csv  shelter_dist_to_cent.csv  top_16_hotspots.csv
data/raw/: neighbourhood-profiles-2021-158-model.xlsx  neighbourhoods_4326.geojson  shelters_wgs84.shp.xml  toronto-shelter-system-flow.csv  toronto-shelter-system-flow.json  toronto-shelter-system-flow.xml
data/raw/neighbourhood_profiles/: toronto-neighbourhood-profiles-2001.csv  toronto-neighbourhood-profiles-2006.csv  toronto-neighbourhood-profiles-2011.csv  toronto-neighbourhood-profiles-2016.csv  toronto-neighbourhood-profiles-2021.xlsx
notebooks/: 1.0-exploratory-data-analysis.ipynb  1.0-initial-exploratory-data-analysis.ipynb  2.0-deep-exploratory-data-analysis.ipynb  3.0-hotspot-and-distance-calculations.ipynb  3.0-initial-hotspot-computation.ipynb  3.0-optimization-modeling.ipynb  4.0-further-data-processing.ipynb  5.0-baseline-optimization-modeling.ipynb  5.0-multi-hotspot-and-distance-calculations.ipynb  6.0-final-optimization-model.ipynb  6.0-simulations.ipynb  EDA.ipynb
src/: config.py  dataset.py  run_etl.py
src/etl/: extract.py  load.py  transform.py
src/optimization/: model.py  run.py
src/simulation/: entities.py  simulation.py
(+4 files in other folders)
